--- a/templates/index.html
+++ b/templates/index.html
@@ -9,17 +9,40 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'fa/css/all.min.css' %}">
 </head>
-<body>
-    <!-- navbar -->
-    {% include "nav.html" %}
-    
-    <main class="mt-5 mb-5 container w-75 d-flex justify-content-center">
-        {% block content %}{% endblock content %}
-    </main>
-        
-
-    {% include "footer.html" %}
-    
+<body class="text-center">
+    <div class="fluid-container d-flex justify-content-between mx-auto flex-column" style="height: 100vh;">
+        <header class="">
+            <div class="inner">
+                <nav class="navbar navbar-expand-lg text-left" style="background: #ed8a00; color: black;">
+                    <!-- navbar -->
+                    {% include "nav.html" %}
+                </nav>
+            </div>
+        </header>
+        <!-- content -->
+        <main role="main" class="inner text-left">
+            <div class="h-100">
+                <div class="d-flex justify-content-center">
+                    <div class="card w-50">
+                        <div class="card-body">
+                            <h5 class="card-title">{% block card-title %}{% endblock card-title %}</h5>
+                            <hr>
+                            <div class="card-content">
+                                {% block content %}{% endblock content %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="text-center text-lg-start bg-light text-muted bg-dark">
+            <div class="inner">
+                <!-- footer -->
+                {% include "footer.html" %}
+            </div>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+    {% block scripts %}{% endblock scripts %}
 </body>
 </html>
