--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,23 +1,21 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg" style="background: #ed8a00; color: black;">
-    <div class="container-fluid">
-        <a class="navbar-brand text-decoration-none text-white text-bolder" href="#">Nome do projeto</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon pt-1"><i class="fas fa-bars text-white"></i></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active text-decoration-none text-white" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-decoration-none text-white" href="#">Simulados</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-decoration-none text-white" href="#">Placas</a>
-                </li>
-            </ul>
-        </div>
+<div class="container-fluid">
+    <a class="navbar-brand text-decoration-none text-white text-bolder" href="#">Nome do projeto</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon pt-1"><i class="fas fa-bars text-white"></i></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link active text-decoration-none text-white" aria-current="page" href="{% url 'site.index' %}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-decoration-none text-white" href="{% url 'quis.index' %}">Simulados</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-decoration-none text-white" href="{% url 'placas.index' %}">Placas</a>
+            </li>
+        </ul>
     </div>
-</nav>
+</div>
 <!-- Navbar -->
