--- a/templates/app_quis/resultado.html
+++ b/templates/app_quis/resultado.html
@@ -65,9 +65,9 @@
         {% endfor %}
     </div>
     <div class="text-right">
-        <button type="button" id="btn-visualizar" class="btn btn-warning text-white">Ver todas</button>
-        <button type="button" id="btn-voltar" class="btn btn-danger d-none ml-2">Voltar</button>
-        <button type="button" id="btn-responder" class="btn btn-primary ml-2">Próxima</button>
+        <button type="button" id="btn-visualizar" class="btn btn-warning text-white shadow">Ver todas</button>
+        <button type="button" id="btn-voltar" class="btn btn-danger d-none ml-2 shadow">Voltar</button>
+        <button type="button" id="btn-responder" class="btn btn-primary ml-2 shadow">Próxima</button>
     </div>
 </div>
 {% endblock content %}
