--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'fa/css/all.min.css' %}">
 </head>
-<body class="text-center">
+<body class="text-center" style="background-color: #fafafa;">
     <div class="fluid-container d-flex justify-content-between mx-auto flex-column" style="height: 100vh;">
         <header class="">
             <div class="inner">
@@ -23,7 +23,7 @@
         <main role="main" class="inner text-left mt-5 mb-5">
             <div class="h-100">
                 <div class="d-flex justify-content-center">
-                    <div class="card w-50">
+                    <div class="card shadow border-0 rounder w-50">
                         <div class="card-body">
                             <div class="card-title">
                                 {% block card-title %}{% endblock card-title %}
