--- a/templates/app_placas/index.html
+++ b/templates/app_placas/index.html
@@ -1,17 +1,53 @@
 {% extends 'index.html' %}
 
 {% block card-title %}
-
+<h5>Sinalizações de trânsito</h5>
 {% endblock card-title %}
 
 {% block content %}
 <div>
-    <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="h-100 p-4 d-flex justify-content-around align-items-center">
-                <img src="../../static/image/placas/regulamentacao/00-parada-obrigatoria.png" style="max-width: 100px;" class="card-img-top">
-                <span class="w-50"><strong>Parada obrigatória</strong></span>
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Regulamentação
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <div class="row">
+                    {% for placa in regulamentacao %}
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="h-100 p-4 d-flex justify-content-around align-items-center">
+                                <img src="/static/image/placas/regulamentacao/{{placa.imagem}}.png" style="max-width: 100px;" class="card-img-top" loading="lazy">
+                                <span class="w-50"><strong>{{ placa.descricao }}</strong></span>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+              Advertência
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <div class="row">
+                    {% for placa in advertencia %}
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="h-100 p-4 d-flex justify-content-around align-items-center">
+                                <img src="/static/image/placas/advertencia/{{placa.imagem}}.png" style="max-width: 100px;" class="card-img-top" loading="lazy">
+                                <span class="w-50"><strong>{{ placa.descricao }}</strong></span>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+          </div>
         </div>
     </div>
 </div>
@@ -19,5 +55,7 @@
 
 
 {% block scripts %}
-
+<script>
+    
+</script>
 {% endblock scripts %}
