--- a/templates/app_quis/resultado.html
+++ b/templates/app_quis/resultado.html
@@ -10,12 +10,12 @@
 {% block content %}
 <style>
     @keyframes fadeIn {
-        0% { opacity: 0; margin-left: 20px;}
+        0% { opacity: 0; margin-start: 20px;}
         100% { opacity: 1; } 
     }
     @keyframes fadeOut {
         0% { opacity: 1; } 
-        100% { opacity: 0; margin-left: 20px;}
+        100% { opacity: 0; margin-start: 20px;}
     }
     .fadeIn {
         animation: fadeIn .8s ease-in-out;
@@ -64,10 +64,10 @@
             </div>
         {% endfor %}
     </div>
-    <div class="text-right">
+    <div class="text-end">
         <button type="button" id="btn-visualizar" class="btn btn-warning text-white shadow">Ver todas</button>
-        <button type="button" id="btn-voltar" class="btn btn-danger d-none ml-2 shadow">Voltar</button>
-        <button type="button" id="btn-responder" class="btn btn-primary ml-2 shadow">Próxima</button>
+        <button type="button" id="btn-voltar" class="btn btn-danger d-none ms-2 shadow">Voltar</button>
+        <button type="button" id="btn-responder" class="btn btn-primary ms-2 shadow">Próxima</button>
     </div>
 </div>
 {% endblock content %}
