--- a/templates/index.html
+++ b/templates/index.html
@@ -6,21 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sinal de Trânsito</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'fa/css/all.min.css' %}">
 </head>
 <body class="text-center" style="background-color: #fafafa;">
     <div class="fluid-container d-flex justify-content-between mx-auto flex-column" style="height: 100vh;">
         <header class="">
             <div class="inner">
-                <nav class="navbar navbar-expand-lg text-left" style="background: #ed8a00; color: black;">
+                <nav class="navbar navbar-expand-lg text-start" style="background: #ed8a00; color: black;">
                     <!-- navbar -->
                     {% include "nav.html" %}
                 </nav>
             </div>
         </header>
         <!-- content -->
-        <main role="main" class="inner text-left mt-5 mb-5">
+        <main role="main" class="inner text-start mt-5 mb-5">
             <div class="h-100">
                 <div class="d-flex justify-content-center">
                     <div class="card shadow border-0 rounder w-75">
