--- a/templates/footer.html
+++ b/templates/footer.html
@@ -56,6 +56,6 @@
 
 <div class="text-center p-2 text-white" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Copyright:
-    <span class="text-reset fw-bold">Sinal de Trânsito</span>
+    <span class="text-reset fw-bold">Educação de Trânsito</span>
 </div>
 <!-- Footer -->
