--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <!-- Navbar -->
 <div class="container-fluid">
-    <a class="navbar-brand text-decoration-none text-white text-bolder" href="#">Sinal de Trânsito</a>
+    <a class="navbar-brand text-decoration-none text-white text-bolder" href="#">Educação de Trânsito</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon pt-1"><i class="fas fa-bars text-white"></i></span>
     </button>
